--- a/index.html
+++ b/index.html
@@ -6,15 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>todolist-taskset</title>
   </head>
-  <body class="dark:bg-(--color-pelenepikos-100)">
+  <body>
     <div id="app">
-      <div class="h-10 w-10 bg-red-500 relative dark:bg-purple-800">
-        <p
-          class="h-6 w-6 absolute top-1/2 left-1/2 -translate-1/2 bg-transparent text-white font-black text-center dark:text-amber-600"
-        >
-          X
-        </p>
-      </div>
     </div>
     <script type="module" src="/src/main.js"></script>
   </body>
