--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!doctype html>
-<html lang="en" class="dark">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>todolist-taskset</title>
   </head>
-  <body>
-    <div id="app">
-    </div>
+  <body class="dark:bg-[#123249]">
+    <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
